--- a/src/components/mainCard/mainCard.module.css
+++ b/src/components/mainCard/mainCard.module.css
@@ -1,28 +1,30 @@
-.container{
-    max-width: 90%;
+.container {
+    max-width: 60%;
     width: 100%;
     border: none;
     border-radius: 15px;
-   background: rgb(171, 171, 238);
-   padding: 25px;
-   box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.13);
-   -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.13);
-   -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.13);
+    background: rgb(171, 171, 238);
+    padding: 25px;
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.13);
+    -webkit-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.13);
+    -moz-box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.13);
 }
-.container h1{
-    font-size: 25px;
-}
-.content, .main_content{
+
+
+.content,
+.main_content {
     display: flex;
     flex-wrap: wrap;
-    gap: 20px;
+    gap: 30px;
     align-items: center;
     justify-content: center;
 }
-.weather{
-text-align: center;
-}
-.other_content h3{
+
+.other_content h3 {
     text-align: center;
     padding-bottom: 10px;
+}
+
+.image {
+    width: 70px;
 }
